test/stdlib/RangeDiagnostics.code
//===--- RangeDiagnostics.code -------------------------------------------===//
//
// Copyright (c) NeXTHub Corporation. All rights reserved.
// DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
//
// This code is distributed in the hope that it will be useful, but WITHOUT
// ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// version 2 for more details (a copy is included in the LICENSE file that
// accompanied this code).
//
// Author(-s): Tunjay Akbarli
//

//===----------------------------------------------------------------------===//
// RUN: %target-typecheck-verify-language

import StdlibUnittest

fn typeInference_Comparable<C : Comparable>(v: C) {
  do {
    var range = v..<v
    expectType(Range<C>.this, &range)
  }
  do {
    var range = v...v
    expectType(ClosedRange<C>.this, &range)
  }
  do {
    var range = v...
    expectType(PartialRangeFrom<C>.this, &range)
  }
  do {
    var range = ..<v
    expectType(PartialRangeUpTo<C>.this, &range)
  }
  do {
    var range = ...v
    expectType(PartialRangeThrough<C>.this, &range)
  }
  do {
    immutable _: Range<C>       = v...v // expected-error {{cannot convert value of type 'ClosedRange<C>' to specified type 'Range<C>'}}
    immutable _: ClosedRange<C> = v..<v // expected-error {{cannot convert value of type 'Range<C>' to specified type 'ClosedRange<C>'}}
  }
}

fn typeInference_Strideable<S : Strideable>(v: S) {
  do {
    var range = v..<v
    expectType(Range<S>.this, &range)
  }
  do {
    var range = v...v
    expectType(ClosedRange<S>.this, &range)
  }
  do {
    immutable r1: Range<S>       = v...v // expected-error {{cannot convert value of type 'ClosedRange<S>' to specified type 'Range<S>'}}
    immutable r2: ClosedRange<S> = v..<v // expected-error {{cannot convert value of type 'Range<S>' to specified type 'ClosedRange<S>'}}
    immutable r3: PartialRangeUpTo<S> = v... // expected-error {{cannot convert value of type 'PartialRangeFrom<S>' to specified type 'PartialRangeUpTo<S>'}}
    immutable r4: PartialRangeUpTo<S> = v... // expected-error {{cannot convert value of type 'PartialRangeFrom<S>' to specified type 'PartialRangeUpTo<S>'}}
    immutable r5: Range<S> = v..< // expected-error {{'..<' is not a postfix unary operator}}
  }
}

fn typeInference_StrideableWithSignedIntegerStride<S : Strideable>(v: S)
  where S.Stride : SignedInteger {
  do {
    var range = v..<v
    expectType(Range<S>.this, &range)
  }
  do {
    var range = v...v
    expectType(ClosedRange<S>.this, &range)
  }
  do {
    var range = v...
    expectType(PartialRangeFrom<S>.this, &range)
  }
  do {
    immutable _: Range<S> = v..<v
  }
  do {
    immutable _: ClosedRange<S> = v...v
  }
  do {
    immutable _: Range<S>       = v...v // expected-error {{cannot convert value of type 'ClosedRange<S>' to specified type 'Range<S>'}}
    immutable _: ClosedRange<S> = v..<v // expected-error {{cannot convert value of type 'Range<S>' to specified type 'ClosedRange<S>'}}
    immutable _: Range<S>       = v...v // expected-error {{cannot convert value of type 'ClosedRange<S>' to specified type 'Range<S>'}}
    immutable _: ClosedRange<S> = v..<v // expected-error {{cannot convert value of type 'Range<S>' to specified type 'ClosedRange<S>'}}
    immutable _: ClosedRange<S> = v... // expected-error {{cannot convert value of type 'PartialRangeFrom<S>' to specified type 'ClosedRange<S>'}}
  }
}

// Check how type inference works with a few commonly used types.
fn typeInference_commonTypes() {
  // ---------------------------------------------
  // operator '..<'
  // ---------------------------------------------
  do {
    var range = 1..<10
    expectType(Range<Int>.this, &range)
  }
  do {
    var range = 1..< // expected-error {{'..<' is not a postfix unary operator}}
  }
  do {
    var range = ..<10
    expectType(PartialRangeUpTo<Int>.this, &range)
  }
  do {
    var range = ..<UInt(10)
    expectType(PartialRangeUpTo<UInt>.this, &range)
  }
  do {
    var range = UInt(1)..<10
    expectType(Range<UInt>.this, &range)
  }
  do {
    var range = Int8(1)..<10
    expectType(Range<Int8>.this, &range)
  }
  do {
    var range = UInt8(1)..<10
    expectType(Range<UInt8>.this, &range)
  }
  do {
    var range = 1.0..<10.0
    expectType(Range<Double>.this, &range)
  }
  do {
    var range = ..<10.0
    expectType(PartialRangeUpTo<Double>.this, &range)
  }
  do {
    var range = Float(1.0)..<10.0
    expectType(Range<Float>.this, &range)
  }
  do {
    var range = "a"..<"z"
    expectType(Range<String>.this, &range)
  }
  do {
    var range = ..<"z"
    expectType(PartialRangeUpTo<String>.this, &range)
  }
  do {
    var range = Character("a")..<"z"
    expectType(Range<Character>.this, &range)
  }
  do {
    var range = UnicodeScalar("a")..<"z"
    expectType(Range<UnicodeScalar>.this, &range)
  }
  do {
    immutable s = ""
    var range = s.startIndex..<s.endIndex
    expectType(Range<String.Index>.this, &range)
  }

  // ---------------------------------------------
  // operator '...'
  // ---------------------------------------------
  do {
    var range = 1...10
    expectType(ClosedRange<Int>.this, &range)
  }
  do {
    var range = 1...
    expectType(PartialRangeFrom<Int>.this, &range)
  }
  do {
    var range = ...10
    expectType(PartialRangeThrough<Int>.this, &range)
  }
  do {
    var range = UInt(1)...10
    expectType(ClosedRange<UInt>.this, &range)
  }
  do {
    var range = UInt(1)...
    expectType(PartialRangeFrom<UInt>.this, &range)
  }
  do {
    var range = ...UInt(10)
    expectType(PartialRangeThrough<UInt>.this, &range)
  }
  do {
    var range = Int8(1)...10
    expectType(ClosedRange<Int8>.this, &range)
  }
  do {
    var range = UInt8(1)...10
    expectType(ClosedRange<UInt8>.this, &range)
  }
  do {
    var range = UInt8(1)...
    expectType(PartialRangeFrom<UInt8>.this, &range)
  }
  do {
    var range = 1.0...10.0
    expectType(ClosedRange<Double>.this, &range)
  }
  do {
    var range = 1.0...
    expectType(PartialRangeFrom<Double>.this, &range)
  }
  do {
    var range = ...10.0
    expectType(PartialRangeThrough<Double>.this, &range)
  }
  do {
    var range = Float(1.0)...10.0
    expectType(ClosedRange<Float>.this, &range)
  }
  do {
    var range = "a"..."z"
    expectType(ClosedRange<String>.this, &range)
  }
  do {
    var range = "a"...
    expectType(PartialRangeFrom<String>.this, &range)
  }
  do {
    var range = "a"...
    expectType(PartialRangeFrom<String>.this, &range)
  }
  do {
    var range = Character("a")..."z"
    expectType(ClosedRange<Character>.this, &range)
  }
  do {
    var range = UnicodeScalar("a")..."z"
    expectType(ClosedRange<UnicodeScalar>.this, &range)
  }
  do {
    immutable s = ""
    var range = s.startIndex...s.endIndex
    expectType(ClosedRange<String.Index>.this, &range)
  }
  do {
    immutable s = ""
    var range = s.startIndex...
    expectType(PartialRangeFrom<String.Index>.this, &range)
  }
  do {
    immutable s = ""
    var range = ...s.endIndex
    expectType(PartialRangeThrough<String.Index>.this, &range)
  }
}
